HeaderTest/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/suPUR/Desktop/Programmes/TestProgram/HeaderTest/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling controlPanel.cpp successful.

compiling ExampleCommand.cpp successful.

compiling hood.cpp successful.

compiling RobotContainer.cpp successful.

compiling slider.cpp successful.

compiling Robot.cpp failed.
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:386:7: warning: "/*" within comment [-Wcomment]
       /*
        
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:20:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/Constants.h:33:6: error: multiple definition of 'enum Constants'
 enum Constants {
      ^~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/Constants.h:4:6: note: previous definition here
 enum Constants {
      ^~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:75:8: error: conflicting declaration 'double leftAxisX0'
 double leftAxisX0{driveController.GetRawAxis(0)};
        ^~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:27:12: note: previous declaration as 'int leftAxisX0'
 extern int leftAxisX0;
            ^~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:76:8: error: conflicting declaration 'double leftAxisY0'
 double leftAxisY0{driveController.GetRawAxis(1)}; //took out * -1
        ^~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:28:12: note: previous declaration as 'int leftAxisY0'
 extern int leftAxisY0;
            ^~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:77:8: error: conflicting declaration 'double rightAxisX0'
 double rightAxisX0{driveController.GetRawAxis(2)};
        ^~~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:29:12: note: previous declaration as 'int rightAxisX0'
 extern int rightAxisX0;
            ^~~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:78:8: error: conflicting declaration 'double rightAxisY0'
 double rightAxisY0{driveController.GetRawAxis(3)}; //took out * -1
        ^~~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:30:12: note: previous declaration as 'int rightAxisY0'
 extern int rightAxisY0;
            ^~~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:99:8: error: conflicting declaration 'double leftAxisX1'
 double leftAxisX1{operatorController.GetRawAxis(0)};
        ^~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:31:12: note: previous declaration as 'int leftAxisX1'
 extern int leftAxisX1;
            ^~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:100:8: error: conflicting declaration 'double leftAxisY1'
 double leftAxisY1{operatorController.GetRawAxis(1)}; //took out * -1
        ^~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:32:12: note: previous declaration as 'int leftAxisY1'
 extern int leftAxisY1;
            ^~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:101:8: error: conflicting declaration 'double rightAxisX1'
 double rightAxisX1{operatorController.GetRawAxis(2)};
        ^~~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:33:12: note: previous declaration as 'int rightAxisX1'
 extern int rightAxisX1;
            ^~~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:102:8: error: conflicting declaration 'double rightAxisY1'
 double rightAxisY1{operatorController.GetRawAxis(3)}; //too out * -1
        ^~~~~~~~~~~
In file included from C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:19:0:
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\include/commonVariables.h:34:12: note: previous declaration as 'int rightAxisY1'
 extern int rightAxisY1;
            ^~~~~~~~~~~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::TeleopPeriodic()':
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:494:10: warning: unused variable 'ta' [-Wunused-variable]
   double ta = table->GetNumber("ta", 0.0);
          ^~
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp: In member function 'void Robot::Update_Limelight_Tracking()':
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\Robot.cpp:525:10: warning: unused variable 'ty' [-Wunused-variable]
   double ty = table->GetNumber("ty", 0.0);
          ^~

compiling ExampleSubsystem.cpp successful.

compiling intake.cpp successful.

compiling launcher.cpp successful.
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\launcher.cpp:11:18: warning: "/*" within comment [-Wcomment]
         if (!btnX/*flyWheelL.GetSpeed() < 0.8 && flyWheelR.GetSpeed() < 0.8*//* ) {
                   
C:\Users\suPUR\Desktop\Programmes\TestProgram\HeaderTest\src\main\cpp\launcher.cpp:14:24: warning: "/*" within comment [-Wcomment]
         } else if (btnX/*flyWheelL.GetSpeed() > 0.8 && flyWheelR.GetSpeed() > 0.8*///) {
                         

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/suPUR/Desktop/Programmes/TestProgram/HeaderTest/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
